--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
@@ -316,6 +317,8 @@
 </div>
 
 <div class="content" role="main">
+<app-notification></app-notification>
+<app-demos></app-demos>
 
   <!-- Highlight Card -->
   <div class="card highlight-card card-small">
