--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-cabecera></app-cabecera>
-<app-notification></app-notification>
-<app-demos></app-demos>
+<div class="container-fluid">
+  <app-notification></app-notification>
+  <app-demos></app-demos>
+</div>
 <router-outlet></router-outlet>
