--- a/src/app/demos/demos.component.html
+++ b/src/app/demos/demos.component.html
@@ -1,4 +1,4 @@
-<h1>Hola {{Nombre}}</h1>
+<h1>Hola {{Nombre | uppercase}}</h1>
 <p>
   <input type="text" [(ngModel)]="Nombre" >
 </p>
@@ -21,11 +21,11 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus tempore odio 
 </p>
 <p [class.semivisible]="!visible">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus tempore </p>
 <p>
-  Calcula: 2 + 2 = {{2 + 2}} = {{ calcula(2, 2) }}
+  Calcula: 2 + 2 = {{(2 + 2)| number:'3.2-5' }} = {{ calcula(2, 2) | currency:'EUR':'symbol':'1.2-2' }}
 </p>
 <ul>
-  <li *ngFor="let item of listado; let ind=index; let fondo=odd;" [style.background-color]="fondo ? 'LightBlue' : 'Lavender'">
-    {{item.nombre}} ({{item.id}}) [Elemento {{ind + 1}} de {{listado.length}}]
+  <li *ngFor="let item of listado | slice:-5; let ind=index; let fondo=odd;" [style.background-color]="fondo ? 'LightBlue' : 'Lavender'">
+    {{item.nombre | titlecase}} ({{item.id}}) [Elemento {{ind + 1}} de {{listado.length}}]
   </li>
 </ul>
 <p>
@@ -37,3 +37,4 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus tempore odio 
   <input type="text" value="Madrid" #txtProvincia >
   <input type="button" value="add" (click)="add(txtProvincia.value)" >
 </p>
+<p>{{listado | json}}</p>
